--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1>Projects</h1>
         <div style="display: flex">
           <div class="box">
-            <h3><a href="https://github.com/rinkujustin10/tech-shop/tech-shop.html">Tech-Shop</a></h3>
+            <h3><a href="https://rinkujustin10.github.io/tech-shop/tech-shop.html">Tech-Shop</a></h3>
             <p>
               A fully responsive e-commerce website built using HTML, CSS,and Bootstrap. The Tech-Shop project showcases a modern, user-friendly design for an online tech store. The website provides an interactive platform for users to browse, filter, and search for tech products, making it an ideal tool for users seeking an intuitive shopping experience.
             </p>
